--- a/src/assets/Css/style.css
+++ b/src/assets/Css/style.css
@@ -27,9 +27,10 @@
     height: 50px;
 }
 
-.nav-bg-color {
-    background-color: rgb(59, 86, 161);
-    backdrop-filter: blur(5px);
+.navbar {
+    background-color: rgb(59, 86, 160);
+    /* backdrop-filter: blur(5px); */
+
 }
 
 .btn-size {
