--- a/src/shareComponents/Menu/menu.css
+++ b/src/shareComponents/Menu/menu.css
@@ -24,29 +24,33 @@
     width: 220px;
     height: 40px;
     background: rgba(255, 255, 255, 0);
+    padding: 10px;
+    text-align: center;
+
 
 }
 
 .btn-berDownload:hover {
     cursor: pointer;
+    border: 1px #ffffff solid;
+}
 
+.btn-berDownload:focus {
+    outline: none;
 }
 
 .btn-berDownload p {
     color: #ffffff;
     font-size: 20px;
-    text-align: center;
+    margin: 0;
     display: flex;
     align-items: center;
-    margin: 0;
 }
 
 .image-berDownload {
     height: 30px;
-    width: 30px;
-    margin: 0 10px;
-    /* outline: none;
-    border: none; */
+    width: 35px;
+    margin-right: 10px;
 }
 
 .image-berMenu {
