--- a/src/assets/Css/style.css
+++ b/src/assets/Css/style.css
@@ -98,6 +98,16 @@
 
 /* -------------------------- Start Home --------------------------  */
 
+.btn-line {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #00B900;
+    border: none;
+    color: #ffffff;
+    margin: 15px 0;
+}
+
 .home-image {
     background-image: url(../../../src/assets/images/bg-home.png);
     height: 100vh;
@@ -253,6 +263,16 @@
         height: 40px;
         margin: 5px auto 20px auto;
         border-radius: 10px;
+    }
+
+    .btn-line {
+        width: 100%;
+        height: 40px;
+        border-radius: 10px;
+        background-color: #00B900;
+        border: none;
+        color: #ffffff;
+        margin: 15px 0;
     }
 }
 
