--- a/src/assets/Css/style.css
+++ b/src/assets/Css/style.css
@@ -106,6 +106,10 @@
     border: none;
     color: #ffffff;
     margin: 15px 0;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .home-image {
@@ -214,7 +218,7 @@
     }
 
     .alert-home {
-        width: 90%;
+        width: 80%;
         margin: 20px auto;
         border-radius: 40px;
         background-color: #EB4B45;
